--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 node_js:
   - "0.12.7"
-before_install: npm install -g grunt-cli
+before_install: 
+    - gem install sass
+    - npm install -g grunt-cli
 install: 
     - npm install
-    - gem install sass
 before_script: grunt build
